added jotai statemanager

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@privy-io/react-auth": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.487.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
