--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "^2.8.2",
+    "@privy-io/wagmi": "^1.0.3",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "jotai": "^2.12.2",
@@ -22,7 +24,9 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "viem": "^2.25.0",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
