--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "viem": "^2.25.0",
-    "wagmi": "^2.14.16"
+    "wagmi": "^2.14.16",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
